signout,signin_design

--- a/유기태/public/stylesheets/style.css
+++ b/유기태/public/stylesheets/style.css
@@ -83,3 +83,71 @@
   background: linear-gradient(black,white);
   color: white;
 }
+.banner2{/*signup*/
+  display: inline;
+}
+.upper_column,.lower_column{
+  inline-size: 70%;
+  margin-left: 220px;
+  background-color: gray;
+}
+.upper_column{
+  margin-top: 100px;
+}
+.upper_column img{
+  /*여기서부터하십쇼*/
+  background-color: gray;
+  margin-left: 300px;
+}
+.username_s{
+  background-color: gray;
+  margin-left: 350px;
+}
+.username_s label{
+  background-color: gray;
+}
+.username_s input{
+  margin-right: 40px;
+}
+.userid_s{
+  background-color: gray;
+  margin-top: 20px;
+  margin-left: 350px;
+}
+.userid_s label{
+  background-color: gray;
+  margin-left: 62px;
+}
+.userid_s input{
+
+}
+.userpw_s{
+  background-color: gray;
+  margin-top: 20px;
+  margin-left: 350px;
+}
+.userpw_s label{
+  margin-left: 10px;
+  background-color: gray;
+}
+.userpw_s input{
+
+}
+.btnsignup{
+  margin-top: 50px;
+  margin-left: 350px;
+  margin-bottom: 50px;
+  background-color: gray;
+}
+.btnsignup button{
+  width: 190px;
+  height: 60px;
+  padding: 7px 30px;
+  margin-right: 30px;
+  outline: none;
+  border-radius: 40px;
+  cursor: pointer;
+  color: black;
+  background: lightgray;
+  font-size: 30px;
+}
