--- a/유기태/public/stylesheets/style.css
+++ b/유기태/public/stylesheets/style.css
@@ -1,7 +1,12 @@
+@font-face {
+  /*web font apply*/
+  font-family: cookierun;
+  src: local("CookieRun Regular");
+}
 *{
   margin: 0;
   padding: 0;
-  font-family: 'Archivo', sans-serif;
+  font-family: cookierun;
   background-color:#81CBF8
 }
 .hero{
@@ -22,8 +27,13 @@
   flex-basis: 50%;
 }
 .left-column img{
+  margin-top: 30px;
   width: 100%;
-  height: 100%;
+  height: 90%;
+}
+.left-column{
+  border-radius: 40px 0px 0px 40px;
+  background-color: white;
 }
 .right-column{
   border-radius: 0px 40px 40px 0px;
@@ -44,6 +54,7 @@
   border-bottom: 3px solid black;
 }
 .UserID h1{
+  color:white;
   background-color: #9EE7FA;
   font-size: 50px;
 }
@@ -61,19 +72,20 @@
   border-bottom: 3px solid black;
 }
 .Password h1{
+  color:white;
   background-color: #9EE7FA;
   font-size: 50px;
 }
 .btn{
-  margin-top: 100px;
+  margin-top: 250px;
   margin-left: 100px;
   background-color: #9EE7FA;
 }
 .btn button{
-  width: 190px;
+  width: 200px;
   height: 60px;
   padding: 7px 30px;
-  margin-right: 30px;
+  margin-right: 70px;
   outline: none;
   border-radius: 40px;
   cursor: pointer;
@@ -91,46 +103,50 @@
 .upper_column,.lower_column{
   inline-size: 70%;
   margin-left: 220px;
-  background-color: gray;
+  background-color: #9EE7FA;
 }
 .upper_column{
+  border-radius: 40px 40px 0px 0px;
   margin-top: 100px;
 }
 .upper_column img{
   /*여기서부터하십쇼*/
-  background-color: gray;
+  background-color: #9EE7FA;
   margin-left: 300px;
 }
+.lower_column{
+  border-radius: 0px 0px 40px 40px;
+}
 .username_s{
-  background-color: gray;
+  background-color: #9EE7FA;
   margin-left: 350px;
 }
 .username_s label{
-  background-color: gray;
+  background-color: #9EE7FA;
 }
 .username_s input{
   margin-right: 40px;
 }
 .userid_s{
-  background-color: gray;
+  background-color: #9EE7FA;
   margin-top: 20px;
   margin-left: 350px;
 }
 .userid_s label{
-  background-color: gray;
-  margin-left: 62px;
+  background-color: #9EE7FA;
+  margin-left: 73px;
 }
 .userid_s input{
 
 }
 .userpw_s{
-  background-color: gray;
+  background-color: #9EE7FA;
   margin-top: 20px;
   margin-left: 350px;
 }
 .userpw_s label{
   margin-left: 10px;
-  background-color: gray;
+  background-color: #9EE7FA;
 }
 .userpw_s input{
 
@@ -139,7 +155,8 @@
   margin-top: 50px;
   margin-left: 350px;
   margin-bottom: 50px;
-  background-color: gray;
+  background-color: #9EE7FA;
+  border-radius: 40px;
 }
 .btnsignup button{
   width: 190px;
@@ -153,4 +170,52 @@
   background: lightgray;
   font-size: 30px;
 }
+.banner3{/*Signin*/
+  display: flex;
+}
+.left_column1,.right_column1{
+  margin-left: 80px;
+}
+.left_column1{
+  background-color: #9EE7FA;
+  border-radius: 40px;
+  margin-left: 150px;
+  width: 300px;
+  height: 900px;
+}
+.right_column1{
+  border-radius: 40px 40px 0px 0px;
+  width: 1500px;
+}
+.upper_column1,.lower_column1{
+  background-color: #9EE7FA;
+}
+.upper_column1{
+  border-radius: 40px;
+  height: 550px;
+}
+.lower_column1{
+  margin-top: 50px;
+  height: 300px;
+  border-radius: 40px;
+}
+.lower_column1 ul{
+  background-color: #9EE7FA;
+  margin-left: 30px;
+}
+.lower_column1 li{
+  background-color:#9EE7FA;
+}
+.lower_column1 form{
+  background-color: #9EE7FA;
+  width: 1450px;
+  margin-left:30px;
+  margin-top:10px;
+}
+.lower_column1 input{
+  width:1400px;
+}
+
+
+
 
